build(core): provision Java 25 named module